<resources>
    <string name="app_name">MannaHealPro</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="device_binding">Device Binding</string>
    <string name="this_is_a_cardview">This is a CardView</string>
    <string name="scanning_in_progress_text">Scanning in progress</string>
    <string name="searching_device_text">Searching for available devices...</string>
    <string name="scan_again">Re Scan</string>
    <string name="mannaheal">MannaHeal</string>
    <string name="smart_ring">SmartRing</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="connected">Connected</string>
    <string name="low">Low</string>
    <string name="firmware_version">firmware hardware version : ..</string>
    <string name="str_hrv">heart rate variability</string>
    <string name="str_pressure">pressure</string>
    <string name="str_auto_test_config_setting">auto test config set:</string>
    <string name="str_set">set</string>
    <string name="str_get">get</string>
    <string name="str_get_all">read all configs</string>
    <string name="str_enable_status">Switch status:</string>
    <string name="str_interval_time">Interval time(min):</string>
    <string name="str_sync_auto_hrv_data">Synchronize auto hrv data</string>
    <string name="str_sync_auto_pressure_data">Synchronize auto pressure data</string>
    <string name="str_notify_firmware_uplaod_data">Send instructions to notify firmware to report data</string>
    <string name="heart_rate_variability">Heart rate variability</string>
    <string name="_0_times_min">0 times/min</string>
    <string name="stress">Stress</string>
    <string name="zero">0</string>
    <string name="temperature">Body temperature</string>
    <string name="available_doctors">Available Doctors</string>
    <string name="online">Online</string>
    <string name="book_now">Book Now</string>
    <string name="choose_your_preferred_date_time"><![CDATA[Choose your preferred Date & Time]]></string>
    <string name="next_week">Next week</string>
    <string name="prev_week">Prev Week</string>
    <string name="appointment_for">Appointment for</string>
    <string name="symptoms">Symptoms</string>
    <string name="make_an_appointment">Make an Appointment</string>
    <string name="card_title">Card Title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_name">Navigation Header</string>
    <string name="bind_the_de">Bind the device</string>
    <string name="bind_the_device_sub">you have not bound any device yet</string>
    <string name="title_activity_equipment">Equipment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="str_get_last_data"> Get last data</string>
    <string name="str_get_battery"> Get battery</string>
    <string name="str_listen_battery"> Listen to battery change</string>
    <string name="str_cancel_listen_battery"> Cancel listening to battery</string>
    <string name="str_sedentary_step"> Sedentary step threshold:</string>
    <string name="str_setting_sedentary_reminder"> Set sedentary reminder</string>
    <string name="str_sync_segment_step_data"> Sync segment step data</string>
    <string name="str_sync_total_step_data"> Sync total step data of the day</string>
    <string name="str_sync_sleep_data"> Sync sleep data</string>
    <string name="str_sync_auto_heart_data"> Sync automatic heart rate data</string>
    <string name="str_sync_auto_ecg_data"> Sync automatic ECG data</string>
    <string name="str_sync_auto_blood_oxygen_data"> Sync automatic blood oxygen data</string>
    <string name="str_sync_auto_blood_pressure_data"> Sync automatic blood pressure data</string>
    <string name="str_sync_sport_data"> Sync sport data</string>
    <string name="str_sync_body_temperature_data"> Sync body temperature data</string>
    <string name="str_raw_data"> Raw data:</string>
    <string name="str_bt_wifi_detail"> Data details:</string>
    <string name="str_ok"> OK</string>
    <string name="str_time_sync"> Time sync</string>
    <string name="str_auto_heart_interval"> Heart rate interval (min)</string>
    <string name="str_auto_heart_test"> Automatic heart rate test</string>
    <string name="str_hour_12"> 12-hour system</string>
    <string name="str_hour_24"> 24-hour system</string>
    <string name="str_temperature_system0"> Celsius</string>
    <string name="str_temperature_system1"> Fahrenheit</string>
    <string name="str_language_setting"> Language setting</string>
    <string name="str_weather_type"> Weather type (0-17)</string>
    <string name="str_set_weather"> Set weather</string>
    <string name="str_start_find_firmware"> Start finding firmware</string>
    <string name="str_stop_find_firmware"> Stop finding firmware</string>
    <string name="str_unbind">UnPair</string>
    <string name="str_disconnect">Disconnected</string>
    <string name="str_connect_success">Connect Success</string>
    <string name="str_connect_fail">Connect Fail</string>
    <string name="rtk_dfu_file_size">%d bytes</string>
    <string name="rtk_dfu_detail_file_info_sub_file_type">Type:</string>
    <string name="rtk_dfu_detail_file_info_sub_file_version">Version:</string>
    <string name="rtk_dfu_detail_file_info_sub_file_size">size:</string>
    <string name="rtk_dfu_image_section_size">Section size:</string>
    <string name="header_title_dfu_file_info">File details</string>
    <string name="rtk_dfu_text_file_path">File path</string>
    <string name="rtk_dfu_text_file_name">File name</string>
    <string name="rtk_dfu_text_file_type">file type</string>
    <string name="rtk_dfu_text_file_size">file size</string>
    <string name="rtk_dfu_text_target_device">device</string>
    <string name="rtk_dfu_text_file_upload_content">Upload Content</string>
    <string name="rtk_dfu_text_file_image_size">Image size</string>
    <string name="rtk_dfu_text_file_image_version">Image version</string>
    <string name="rtk_dfu_text_file_status">Status</string>
    <string name="rtk_dfu_text_file_ic_type">chip</string>
    <string name="rtk_dfu_title_device_info">Device information</string>
    <string name="rtk_dfu_title_file_content">File content</string>
    <string name="rtk_dfu_title_work_mode">Work Mode</string>
    <string name="rtk_dfu_text_target_name">device name</string>
    <string name="rtk_dfu_text_target_bd_address">Bluetooth address</string>
    <string name="rtk_dfu_text_battery_level">Battery</string>
    <string name="rtk_dfu_text_target_device_mac">MAC</string>
    <string name="rtk_dfu_text_target_link_key">Link Key</string>
    <string name="rtk_dfu_text_target_old_fw_version">Peer APP version</string>
    <string name="rtk_dfu_text_target_old_patch_version">Peer Patch Version</string>
    <string name="rtk_dfu_text_target_patch_extend_version">Peer Extend Patch Version</string>
    <string name="rtk_dfu_text_target_ic_type">IC type</string>
    <string name="rtk_dfu_text_target_protocol_type">Protocol type</string>
    <string name="rtk_dfu_text_target_update_mechanism">Upgrade mechanism</string>
    <string name="rtk_dfu_text_target_bank">The current bank area to be upgraded</string>
    <string name="rtk_dfu_text_target_pactch_bank">The current Patch Bank area to be upgraded</string>
    <string name="rtk_dfu_text_target_Aes_Mode">AES encryption</string>
    <string name="rtk_dfu_text_target_buffer_check_mode">Buffer Check</string>
    <string name="rtk_dfu_text_target_max_buffer_size">Maximum Buffer Check value</string>
    <string name="send_value_to_device">Send value to device</string>
    <string name="start_blood_sugar">Start blood sugar</string>
    <string name="start_ecg_measure">Start ECG test</string>
    <string name="set_ambient_light_measure_mode">Set ambient light detection mode</string>
    <string name="set_ambient_temperature_and_humidity_monitoring_mode">Set ambient temperature and humidity monitoring mode</string>
    <string name="set_ambient_Light_mode">Set ambient light mode</string>
    <string name="get_temperature_and_humidity_historical_data">Get historical temperature and humidity data</string>
    <string name="get_ambient_light_historical_data">Get ambient light historical data</string>
    <string name="set_blood_oxygen_mode">Set blood oxygen mode</string>
    <string name="get_blood_oxygen_historical_data">Get blood oxygen historical data</string>
    <string name="get_shedding_history_data">Get shedding history data</string>
    <string name="set_schedule">set schedule</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="get_schedule">Get Schedule</string>
    <string name="delete_schedule">Delete schedule</string>
    <string name="modify_schedule">Modify schedule</string>
    <string name="relatives_shock_me">Family and friends shock me</string>
    <string name="send_mobile_type">Send phone model</string>
    <string name="send_weather">Send Weather</string>
    <string name="incoming_call">Incoming call reminder</string>
    <string name="find_mobile">Find Mobile</string>
    <string name="accidental_detection">accidental detection</string>
    <string name="set_screen_brightness">Set screen brightness</string>
    <string name="set_screen_time">Set screen time</string>
    <string name="raise_your_wrist_to_brighten_the_screen_switch">raise wrist to brighten screen switch</string>
    <string name="set_do_not_disturb_mode">Set Do Not Disturb Mode</string>
    <string name="shutdown">Shutdown</string>
    <string name="reboot">reboot</string>
    <string name="reset">Reset to factory settings</string>
    <string name="set_working_mode">Set working mode</string>
    <string name="get_working_mode">Get working mode</string>
    <string name="set_data_upload_threshold">Set data upload threshold</string>
    <string name="ambient_light_monitoring_interval">Ambient light monitoring interval</string>
    <string name="temperature_and_humidity_monitoring_interval">Temperature and humidity monitoring interval</string>
    <string name="temperature_monitoring_interval">Body temperature monitoring interval</string>
    <string name="set_sports_compliance">Sports compliance setting</string>
    <string name="app_calculates_the_heart_rate_and_synchronizes_it_to_the_watch">APP calculates heart rate and synchronizes to watch</string>
    <string name="exercise_risk">exercise risk</string>
    <string name="app_push_information">APP push information</string>
    <string name="sport_data_write_back">Sport data writeback</string>
    <string name="sleep_data_write_back">Sleep data writeback</string>
    <string name="temperature_alarm">Temperature alarm</string>
    <string name="set_the_main_interface">Set the main interface</string>
    <string name="get_the_main_interface">Get the main interface</string>
    <string name="set_time_mode">set time mode</string>
    <string name="get_power">Get power</string>
    <string name="get_temperature_history_data">Get temperature history data</string>
    <string name="get_sleep_history_data">Get sleep history data</string>
    <string name="get_heart_rate_history_data">Get heart rate history data</string>
    <string name="get_sport_history_data">Get sports history data</string>
    <string name="get_ecg_history_data">Sync ecg history data</string>
    <string name="heart_rate_alarm">heart rate alarm</string>
</resources>