<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.smartringpro.mannaheal.MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <TextView
        android:id="@+id/send_value_to_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/send_value_to_device" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/start_blood_sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/start_blood_sugar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

  <TextView
      android:id="@+id/time_start_test_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/start_ecg_measure" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />

  <TextView
      android:id="@+id/set_jiance_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/set_ambient_light_measure_mode" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />

  <TextView
      android:id="@+id/set_wenshi_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/set_ambient_temperature_and_humidity_monitoring_mode" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />

  <TextView
      android:id="@+id/set_huanjingguang_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/set_ambient_Light_mode" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />

  <TextView
      android:id="@+id/get_wenshi_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/get_temperature_and_humidity_historical_data" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />

  <TextView
      android:id="@+id/get_huanjingguang_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/get_ambient_light_historical_data" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />

  <TextView
      android:id="@+id/get_xueyang_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/set_blood_oxygen_mode" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />

  <TextView
      android:id="@+id/get_xueyangval_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/get_blood_oxygen_historical_data" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />

  <TextView
      android:id="@+id/get_tuoluojilu_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/get_shedding_history_data" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />


    <TextView
        android:id="@+id/set_richeng_order_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/set_schedule" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

  <TextView
      android:id="@+id/get_add_richeng_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="15dp"
      android:text="@string/add_schedule" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />

  <TextView
      android:id="@+id/get_get_richeng_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="15dp"
      android:text="@string/get_schedule" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />

  <TextView
      android:id="@+id/get_delete_richeng_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/delete_schedule" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />

  <TextView
      android:id="@+id/get_udpate_richeng_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/modify_schedule" />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/get_qinyou_rock_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/relatives_shock_me" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/get_send_mobile_type_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/send_mobile_type" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/get_send_weather_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/send_weather" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/get_call_phone_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/incoming_call" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/find_phone_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/find_mobile" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/yiwai_jiance_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/accidental_detection" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/liangdu_set_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/set_screen_brightness" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/xiping_set_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/set_screen_time" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/taiwan_liangping_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/raise_your_wrist_to_brighten_the_screen_switch" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/wurao_set_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/set_do_not_disturb_mode" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/guanji_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/shutdown" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/reset_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/reboot" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/huifuchuchang_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/reset" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/set_mode_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/set_working_mode" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/get_mode_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/get_working_mode" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/set_data_val_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/set_data_upload_threshold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/huanjing_guang_set_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/ambient_light_monitoring_interval" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/wenshidu_set_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/temperature_and_humidity_monitoring_interval" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/tiwen_set_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/temperature_monitoring_interval" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/set_sport_gorable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/set_sports_compliance" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/base_hr_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_calculates_the_heart_rate_and_synchronizes_it_to_the_watch" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/sport_notice_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/exercise_risk" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/app_send_msg_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_push_information" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/sport_data_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sport_data_write_back" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/sleep_data_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sleep_data_write_back" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/tiwen_data_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/temperature_alarm" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/set_biaopan_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/set_the_main_interface" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/get_biaopan_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/get_the_main_interface" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />
  </LinearLayout>
</ScrollView>