<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:id="@+id/deviceConnectedView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:backgroundTint="#FFFFFFFF"
            android:elevation="0dp"
            android:minHeight="100dp"
            app:cardBackgroundColor="#FFFFFFFF"
            android:layout_margin="30dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/item_icon"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/smart_ring"
                    android:layout_margin="20dp"
                    android:src="@drawable/smart_ring" />


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/item_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bind_the_de"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:textAppearance="@style/bind_the_de"
                        android:textStyle="bold" />
                <TextView
                        android:id="@+id/item_sub_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_connect_success"
                        android:textAppearance="@style/bind_the_de" />
                <Button
                        android:id="@+id/checkAvailableDoctors"
                        android:layout_width="150dp"
                        android:layout_height="30dp"
                        android:text="@string/available_doctors"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:textSize="14sp"
                        android:textAllCaps="false"
                        android:background="@drawable/round_button"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>